--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/app/client-cache",
-      "destination": "https://next-performance-git-client-cache-perfectbases-projects.vercel.app/app/client-cache"
+      "source": "/app/client-cache/",
+      "destination": "https://next-performance-git-client-cache-perfectbases-projects.vercel.app/app/client-cach/"
     },
     {
       "source": "/app/client-cache/:path*",
