--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "rewrites": [
     {
-      "source": "/app/client-cache/",
-      "destination": "https://next-performance-git-client-cache-perfectbases-projects.vercel.app/app/client-cach/"
-    },
-    {
       "source": "/app/client-cache/:path*",
       "destination": "https://next-performance-git-client-cache-perfectbases-projects.vercel.app/app/client-cache/:path*"
+    },
+    {
+      "source": "/app/client-cache",
+      "destination": "https://next-performance-git-client-cache-perfectbases-projects.vercel.app/app/client-cache"
     }
   ]
 }
