--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "rewrites": [
     {
-      "source": "/app/app/client-cache",
-      "destination": "/app/dynamic"
+      "source": "/app-router/client-cache",
+      "destination": "https://next-performance-git-client-cache-perfectbases-projects.vercel.app/app/client-cache"
     },
     {
-      "source": "/app-router/client-cache",
-      "destination": "/app/dynamic"
+      "source": "/app-router/client-cache/:path*",
+      "destination": "https://next-performance-git-client-cache-perfectbases-projects.vercel.app/app/client-cache/:path*"
     }
   ]
 }
