--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
   "rewrites": [
     {
       "source": "/app-router/client-cache",
-      "destination": "https://next-performance-git-client-cache-perfectbases-projects.vercel.app/app/client-cache"
+      "destination": "https://next-performance-git-client-cache-perfectbases-projects.vercel.app/app-router/client-cache"
     },
     {
       "source": "/app-router/client-cache/:path*",
-      "destination": "https://next-performance-git-client-cache-perfectbases-projects.vercel.app/app/client-cache/:path*"
+      "destination": "https://next-performance-git-client-cache-perfectbases-projects.vercel.app/app-router/client-cache/:path*"
     }
   ]
 }
