--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "linkedom": "^0.18.5",
     "lucide-react": "^0.460.0",
     "next": "15.0.4-canary.25",
     "react": "19.0.0-rc-66855b96-20241106",
